lab1/Test/L1-A-12-82.output
Error Type A at Line 7
Error Type A at Line 9
Error Type B at Line 15
Error Type A at Line 27
Error Type B at Line 28
Error Type B at Line 39
Error Type B at Line 43
Error Type A at Line 63
