lab1/Test/L1-A-12-82.cmm
float ;
int na5yPLaYqz ( int XPB_ocnjQoKOMD5tJE26 , int VA6QbB8A5tUgJKz0I__ 
  ) {
{
    nl0R7sKzhUZqrdFv0 ;
  }}
int JCV9PF8MEZRKRAToQZ ( :) {
  int eBEUL ;
  int cR1RHt0n4_6I2B ~;
  struct {
  }aBDx85gx3DjBtC6Z , HaheqalOyc , TXP = Jl ;
  if ( sY9Az )   if ( m3vCJIVJ5F )   return egnV61VhVsq 
    ;
else   while ( qfAld )   gte3koi6uwQncGUlzrS = LNDpN42ja 
    || LUSOoF6 < - kiBBs2bK6fsr [ GSxjH && + ilRwrz3ev0hE1Rno 
    * IpV8ZNF_8zK ( GIFjUJbj5TmzeYFDJA >= edpta0QHK6U8Fkfjbz 
    + ( w && YD1t87Qi == meDtp2Hez2Y63hQQcd28 / cgdOi_7rz49 
    ( furZ , ZJk4pWi5ZloTxv , W6Waj && XaKz6XVlZznvz <= 
    RU / ! ! XV_Uk7 ( XCQQDd2pdcq6Zk_ || caYqdG7EHU > 
    ldtXoEoanL3Q ) ) . CtxtXEkiW6kvaW ) != 49915265.1678645987 
    - 11300833 * BZ2q6vja ( ) ) . QzU22RB1wyCT6dbUVMyl 
    / ! ! XWG9J8Q9NyLOtYSKOD3 ] ;



}
$struct IFb_VL1BGyIma6w ;
;
struct uligtVELvqLj05dNM HhSXSM , skmpzcjYfwA 

;
struct zCzMb3 {
  int tcnNk7 [ 1956863326 ] ;
}ca1FIqekYGv2oZU5_DU ( int oEesMETb8A ) {
}
int ;
int YxgUoNoOZDT6SK8 ( ) {
  NQIcC ;
  ;
  ureKPVHL ;
  while ( duC1nzQro )   if ( rjvDrQm0tnHTPso9ac8 ) 
      z3z_hHExWWFbn1iapvW ;
else   while ( HfZiLShe3   if ( MNm5VnfXKvOhafZE ) 
      _ZU ;
else {
    if ( t5Gw )     mrcjJD ;
else     if ( gubRyjWfpTCo5b )     gAmDuqiV2Z ;


  }



  B29DVZNfUGNAaYF09 ;
  if ( D7HNg7pA )   while ( KUO4 ) {
  }
else   if ( UH4 )   pC ;
else   Tm6axGJABYbcDfjuESVb ;


  qaPPv ;
}
@